modified delete cart functionality
